@@ -36,6 +36,8 @@ Release date: TBA
 
   Closes #10377
 
+* Modify ``astroid.bases`` and ``tests.test_nodes`` to reflect that `enum.property` was added in Python 3.11, not 3.10
+
 What's New in astroid 3.3.11?
 =============================
 Release date: TBA
